Fixed issues on Mobile
Made buttons & type a bit smaller on mobile @ 500 VH

--- a/style.css
+++ b/style.css
@@ -139,7 +139,7 @@ h2 {
 	font-weight: 400;
 	font-family: 'IBM Plex Sans', sans-serif;
 	color: black;
-	padding-bottom: 20px;
+	padding-bottom: 30px;
 }
 
 h3 {
@@ -151,8 +151,8 @@ h3 {
 }
 
 h4 {
-	font-size: 2.5em;
-	font-weight: 100;
+	font-size: 1.5em;
+	font-weight: 400;
 	font-family: 'IBM Plex Sans', sans-serif;
 	color: black;
 }
@@ -184,7 +184,7 @@ a {
 
 p {
 	font-weight: 300;
-	font-size: 1.2em;
+	font-size: 1.1em;
 	color: black;
 	font-family: 'IBM Plex serif', sans-serif;
 	line-height: 150%;
@@ -654,9 +654,6 @@ about page
 	padding-top: 1%;
 }
 
-.job-text {
-	font-size: 34px;
-}
 .about-img {
 	height: 80vh;
 	object-position: right;
@@ -979,17 +976,24 @@ h5 {
 	.about-col {
 		padding-top: 6%;
 	}
-	.job-text {
-		font-size: 1.9em;
-	}
+
 }
 
-@media screen and (max-width:440px) {
+@media screen and (max-width:500px) {
 
 	.project-img h6{
 		max-width: 93%;
 		margin-bottom: 15px;
 		line-height: 1.2;
+	}
+	h3,h2{
+		font-size: 1.5em;
+	}
+	h6{
+		font-size: .9em;
+	}
+	p{
+		font-size: 1em;
 	}
 	.project-img {
     max-width: 100%;
@@ -1002,10 +1006,10 @@ h5 {
 	}
 
 	.emailMe {
-    padding: 6px 15px;
+    padding: 3px 15px;
 	}
 	.icon {
-    width: 28px;
+    width: 25px;
 	}
 	.about-col {
 		padding-top: 4%;
@@ -1016,9 +1020,7 @@ h5 {
 		object-position: 80% 70%;
 		object-fit: cover;
 	}
-	.job-text {
-		font-size: 1.9em;
-	}
+
 
 }
 
